Use Java 11 for LightSide