@@ -8,7 +8,7 @@
 
 MAXHEAP="4g"
 OS_ARGS=""
-OTHER_ARGS="-XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -Djava.awt.headless=true"
+OTHER_ARGS="-Djava.awt.headless=true"
 
 MAIN_CLASS="edu.cmu.side.recipe.Trainer"
 
